JEAP-6552 Add core rules